cloudexpo/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Is_Trainer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Trainer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trainer_Tier__c</fullName>
        <label>Trainer Tier</label>
        <picklist>
            <picklistValues>
                <fullName>Tier 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advantage</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mployee__Company_Website__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mployee__Title_Degree__c</fullName>
        <label>Title (Degree)</label>
        <picklist>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>